--- a/compose/ui/Dockerfile
+++ b/compose/ui/Dockerfile
@@ -11,4 +11,9 @@ RUN \
     go install && \
     cp /go/bin/ui /go/src/app/ui && \
     rm -rf /go/src/app/SentAndReceivedMsgQueue
+
+#ENV TOPIC=roomchat
+#ENV API_SENDER_URL=http://192.168.1.74:8080/apis/sender
+#ENV API_RECEIVER_URL=http://192.168.1.74:8080/apis/receiver?topic=roomchat
+
 CMD ["ui"]
