--- a/compose/ansible.yml
+++ b/compose/ansible.yml
@@ -4,6 +4,8 @@
   hosts: 127.0.0.1
   user: root
   gather_facts: no
+  vars:
+    IP_HOST: "192.168.1.47" # IP address will be run the app, note: don't use 127.0.0.1
   tasks:
     - docker_service:
         project_name: app
@@ -16,12 +18,12 @@
                - "2181:2181"
 
             kafka:
-             image: wurstmeister/kafka
+             image: wurstmeister/kafka:0.11.4
              #image: wurstmeister/kafka:0.10.2.0-1
              ports:
                - "9092:9092"
              environment:
-               KAFKA_ADVERTISED_HOST_NAME: "192.168.1.74"
+               KAFKA_ADVERTISED_HOST_NAME: "{{ IP_HOST }}"
                KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
                KAFKA_LOG_DIRS: "/kafka/logs"
              volumes:
@@ -34,13 +36,13 @@
                 - "8080:8080"
               environment:
                 API_BIND_PORT: 8080
-                BROKER_LIST_URL: 192.168.1.74:9092
+                BROKER_LIST_URL: "{{ IP_HOST }}:9092"
             ui:
               image: ui
               environment:
                 TOPIC: roomchat
-                API_SENDER_URL: http://192.168.1.74:8080/apis/sender
-                API_RECEIVER_URL: http://192.168.1.74:8080/apis/receiver?topic=roomchat
+                API_SENDER_URL: "http://{{ IP_HOST }}:8080/apis/sender"
+                API_RECEIVER_URL: "http://{{ IP_HOST }}:8080/apis/receiver?topic=roomchat"
       register: output
     - debug:
         var: output
