--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -5,11 +5,11 @@ services:
     ports:
       - "2181:2181"
   kafka:
-    image: wurstmeister/kafka:0.10.2.0-1
+    image: wurstmeister/kafka:0.11.0.1
     ports:
       - "9092:9092"
     environment:
-      KAFKA_ADVERTISED_HOST_NAME: 192.168.1.74
+      KAFKA_ADVERTISED_HOST_NAME: ${IP_HOST}
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_LOG_DIRS: /kafka/logs
     volumes:
@@ -20,10 +20,10 @@ services:
       - "8080:8080"
     environment:
       API_BIND_PORT: 8080
-      BROKER_LIST_URL: 192.168.1.74:9092
+      BROKER_LIST_URL: ${IP_HOST}:9092
   ui:
     image: ui
     environment:
       TOPIC: roomchat
-      API_SENDER_URL: http://192.168.1.74:8080/apis/sender
-      API_RECEIVER_URL: http://192.168.1.74:8080/apis/receiver?topic=roomchat
+      API_SENDER_URL: http://${IP_HOST}:8080/apis/sender
+      API_RECEIVER_URL: http://${IP_HOST}:8080/apis/receiver?topic=roomchat
